correct alignment errors

--- a/styles/sections/_casestudy-contribution.scss
+++ b/styles/sections/_casestudy-contribution.scss
@@ -14,3 +14,11 @@
         }
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .casestudy-contribution {
+        .content {
+            text-align: center;
+        }
+    }
+}
